ui-changes for header sidebar

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -1559,6 +1559,11 @@ body.theme-1 .bg-primary {
     width: 35px;
     margin-bottom: 0;
     padding: 7px;
+    justify-content: center;
+  }
+  .dt-buttons .btn>span {
+    justify-content: center;
+    gap: 0;
   }
 
   .dt-buttons .btn>span {
@@ -1576,10 +1581,24 @@ body.theme-1 .bg-primary {
   }
 }
 
-
-
 /* admin plan Payment scroll */
 .flex-equal-right {
   max-width: 100%;
   overflow: scroll;
+}
+
+/* Instructor slot delete button in calendar */
+.fc-event-title {
+  display: inline-block;
+  margin-right: 5px;
+}
+.fc-delete-btn {
+  display: inline-block;
+  cursor: pointer;
+  font-weight: bold;
+  margin-left: 8px;
+  position: absolute;
+  right: 7px;
+  top: 7px;
+  font-size: 14px;
 }
