new design changes and mobile responsive testing

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -343,6 +343,7 @@ section .custom-section {
   top: 0;
   left: 50%;
   transform: translate(-50%, -50%);
+  width: 70%;
 }
 
 .price-card .list-unstyled {
@@ -1494,9 +1495,12 @@ body.theme-1 .bg-primary {
     content: "\ea5f" !important;
     font-family: tabler-icons !important;
   }
-  table.dataTable.dtr-inline.collapsed>tbody>tr.parent>td.dtr-control:before, table.dataTable.dtr-inline.collapsed>tbody>tr.parent>th.dtr-control:before {
+
+  table.dataTable.dtr-inline.collapsed>tbody>tr.parent>td.dtr-control:before,
+  table.dataTable.dtr-inline.collapsed>tbody>tr.parent>th.dtr-control:before {
     content: "\ea62" !important;
   }
+
   table.vertical-table {
     background-color: #ffffff;
     width: 100%;
@@ -1561,6 +1565,7 @@ body.theme-1 .bg-primary {
     padding: 7px;
     justify-content: center;
   }
+
   .dt-buttons .btn>span {
     justify-content: center;
     gap: 0;
@@ -1592,6 +1597,7 @@ body.theme-1 .bg-primary {
   display: inline-block;
   margin-right: 5px;
 }
+
 .fc-delete-btn {
   display: inline-block;
   cursor: pointer;
