--- a/public/assets/css/customizer.css
+++ b/public/assets/css/customizer.css
@@ -37,7 +37,7 @@ File: style.css
   box-shadow: 0 9px 9px -1px rgba(81, 69, 157, 0.3);
 }
 
-.pct-customizer .pct-c-btn .btn + .btn {
+.pct-customizer .pct-c-btn .btn+.btn {
   margin-top: 8px;
 }
 
@@ -66,7 +66,9 @@ File: style.css
     display: none;
   }
 }
+
 @media (max-width: 768px) {
+
   /* Adjust breakpoint as needed */
   .login-design {
     display: none !important;
@@ -82,8 +84,8 @@ File: style.css
   margin-bottom: 10px;
 }
 
-.doc-img > a,
-.theme-color > a {
+.doc-img>a,
+.theme-color>a {
   position: relative;
   width: 35px;
   height: 25px;
@@ -94,8 +96,8 @@ File: style.css
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.28);
 }
 
-.doc-img > a + a,
-.theme-color > a + a {
+.doc-img>a+a,
+.theme-color>a+a {
   margin-left: 5px;
 }
 
@@ -103,179 +105,163 @@ File: style.css
   width: 512px;
 }
 
-.doc-img > a span,
-.theme-color > a span {
+.doc-img>a span,
+.theme-color>a span {
   width: 100%;
   position: absolute;
 }
 
-.doc-img > a span:after,
-.doc-img > a span:before,
-.theme-color > a span:after,
-.theme-color > a span:before {
+.doc-img>a span:after,
+.doc-img>a span:before,
+.theme-color>a span:after,
+.theme-color>a span:before {
   content: "";
   height: 100%;
   position: absolute;
 }
 
-.doc-img > a span:before,
-.theme-color > a span:before {
+.doc-img>a span:before,
+.theme-color>a span:before {
   width: 32%;
   left: 0;
   background: #1c232f;
 }
 
-.doc-img > a span:after,
-.theme-color > a span:after {
+.doc-img>a span:after,
+.theme-color>a span:after {
   width: 70%;
   right: 0;
   background: #f8f9fd;
 }
 
-.doc-img > a > span:nth-child(1),
-.theme-color > a > span:nth-child(1) {
+.doc-img>a>span:nth-child(1),
+.theme-color>a>span:nth-child(1) {
   height: 40%;
   top: 0;
 }
 
-.doc-img > a > span:nth-child(1):after,
-.theme-color > a > span:nth-child(1):after {
+.doc-img>a>span:nth-child(1):after,
+.theme-color>a>span:nth-child(1):after {
   background: #fff;
 }
 
-.doc-img > a > span:nth-child(2),
-.theme-color > a > span:nth-child(2) {
+.doc-img>a>span:nth-child(2),
+.theme-color>a>span:nth-child(2) {
   height: 66%;
   bottom: 0;
 }
 
-.doc-img.header-color > a[data-value="bg-primary"] > span:nth-child(1):after,
-.theme-color.header-color
-  > a[data-value="bg-primary"]
-  > span:nth-child(1):after {
+.doc-img.header-color>a[data-value="bg-primary"]>span:nth-child(1):after,
+.theme-color.header-color>a[data-value="bg-primary"]>span:nth-child(1):after {
   background: #51459d;
 }
 
-.doc-img.header-color > a[data-value="bg-success"] > span:nth-child(1):after,
-.theme-color.header-color
-  > a[data-value="bg-success"]
-  > span:nth-child(1):after {
+.doc-img.header-color>a[data-value="bg-success"]>span:nth-child(1):after,
+.theme-color.header-color>a[data-value="bg-success"]>span:nth-child(1):after {
   background: #6fd943;
 }
 
-.doc-img.header-color > a[data-value="bg-info"] > span:nth-child(1):after,
-.theme-color.header-color > a[data-value="bg-info"] > span:nth-child(1):after {
+.doc-img.header-color>a[data-value="bg-info"]>span:nth-child(1):after,
+.theme-color.header-color>a[data-value="bg-info"]>span:nth-child(1):after {
   background: #3ec9d6;
 }
 
-.doc-img.header-color > a[data-value="bg-warning"] > span:nth-child(1):after,
-.theme-color.header-color
-  > a[data-value="bg-warning"]
-  > span:nth-child(1):after {
+.doc-img.header-color>a[data-value="bg-warning"]>span:nth-child(1):after,
+.theme-color.header-color>a[data-value="bg-warning"]>span:nth-child(1):after {
   background: #ffa21d;
 }
 
-.doc-img.header-color > a[data-value="bg-danger"] > span:nth-child(1):after,
-.theme-color.header-color
-  > a[data-value="bg-danger"]
-  > span:nth-child(1):after {
+.doc-img.header-color>a[data-value="bg-danger"]>span:nth-child(1):after,
+.theme-color.header-color>a[data-value="bg-danger"]>span:nth-child(1):after {
   background: #ff3a6e;
 }
 
-.doc-img.header-color > a[data-value="bg-dark"] > span:nth-child(1):after,
-.theme-color.header-color > a[data-value="bg-dark"] > span:nth-child(1):after {
+.doc-img.header-color>a[data-value="bg-dark"]>span:nth-child(1):after,
+.theme-color.header-color>a[data-value="bg-dark"]>span:nth-child(1):after {
   background: #1c232f;
 }
 
-.doc-img.brand-color > a[data-value="bg-primary"] > span:nth-child(1):before,
-.theme-color.brand-color
-  > a[data-value="bg-primary"]
-  > span:nth-child(1):before {
+.doc-img.brand-color>a[data-value="bg-primary"]>span:nth-child(1):before,
+.theme-color.brand-color>a[data-value="bg-primary"]>span:nth-child(1):before {
   background: #51459d;
 }
 
-.doc-img.brand-color > a[data-value="bg-success"] > span:nth-child(1):before,
-.theme-color.brand-color
-  > a[data-value="bg-success"]
-  > span:nth-child(1):before {
+.doc-img.brand-color>a[data-value="bg-success"]>span:nth-child(1):before,
+.theme-color.brand-color>a[data-value="bg-success"]>span:nth-child(1):before {
   background: #6fd943;
 }
 
-.doc-img.brand-color > a[data-value="bg-info"] > span:nth-child(1):before,
-.theme-color.brand-color > a[data-value="bg-info"] > span:nth-child(1):before {
+.doc-img.brand-color>a[data-value="bg-info"]>span:nth-child(1):before,
+.theme-color.brand-color>a[data-value="bg-info"]>span:nth-child(1):before {
   background: #3ec9d6;
 }
 
-.doc-img.brand-color > a[data-value="bg-warning"] > span:nth-child(1):before,
-.theme-color.brand-color
-  > a[data-value="bg-warning"]
-  > span:nth-child(1):before {
+.doc-img.brand-color>a[data-value="bg-warning"]>span:nth-child(1):before,
+.theme-color.brand-color>a[data-value="bg-warning"]>span:nth-child(1):before {
   background: #ffa21d;
 }
 
-.doc-img.brand-color > a[data-value="bg-danger"] > span:nth-child(1):before,
-.theme-color.brand-color
-  > a[data-value="bg-danger"]
-  > span:nth-child(1):before {
+.doc-img.brand-color>a[data-value="bg-danger"]>span:nth-child(1):before,
+.theme-color.brand-color>a[data-value="bg-danger"]>span:nth-child(1):before {
   background: #ff3a6e;
 }
 
-.doc-img.brand-color > a[data-value="bg-dark"] > span:nth-child(1):before,
-.theme-color.brand-color > a[data-value="bg-dark"] > span:nth-child(1):before {
+.doc-img.brand-color>a[data-value="bg-dark"]>span:nth-child(1):before,
+.theme-color.brand-color>a[data-value="bg-dark"]>span:nth-child(1):before {
   background: #1c232f;
 }
 
-.doc-img.themes-color > a[data-value="theme-1"],
-.theme-color.themes-color > a[data-value="theme-1"] {
+.doc-img.themes-color>a[data-value="theme-1"],
+.theme-color.themes-color>a[data-value="theme-1"] {
   background: linear-gradient(141.55deg, #0caf60 3.46%, #0caf60 99.86%), #0caf60;
 }
 
-.doc-img.themes-color > a[data-value="theme-3"],
-.theme-color.themes-color > a[data-value="theme-3"] {
+.doc-img.themes-color>a[data-value="theme-3"],
+.theme-color.themes-color>a[data-value="theme-3"] {
   background: linear-gradient(141.55deg, #6fd943 3.46%, #6fd943 99.86%), #6fd943;
 }
 
-.doc-img.themes-color > a[data-value="theme-2"],
-.theme-color.themes-color > a[data-value="theme-2"] {
+.doc-img.themes-color>a[data-value="theme-2"],
+.theme-color.themes-color>a[data-value="theme-2"] {
   background: linear-gradient(141.55deg, #584ed2 3.46%, #584ed2 99.86%), #584ed2;
 }
 
-.doc-img.themes-color > a[data-value="theme-4"],
-.theme-color.themes-color > a[data-value="theme-4"] {
+.doc-img.themes-color>a[data-value="theme-4"],
+.theme-color.themes-color>a[data-value="theme-4"] {
   background: linear-gradient(141.55deg, #145388 3.46%, #145388 99.86%), #145388;
 }
 
-.doc-img.themes-color > a[data-value="theme-5"],
-.theme-color.themes-color > a[data-value="theme-5"] {
+.doc-img.themes-color>a[data-value="theme-5"],
+.theme-color.themes-color>a[data-value="theme-5"] {
   background: linear-gradient(141.55deg, #b9406b 3.46%, #b9406b 99.86%), #b9406b;
 }
 
-.doc-img.themes-color > a[data-value="theme-6"],
-.theme-color.themes-color > a[data-value="theme-6"] {
+.doc-img.themes-color>a[data-value="theme-6"],
+.theme-color.themes-color>a[data-value="theme-6"] {
   background: linear-gradient(141.55deg, #008ecc 3.46%, #008ecc 99.86%), #008ecc;
 }
 
-.doc-img.themes-color > a[data-value="theme-7"],
-.theme-color.themes-color > a[data-value="theme-7"] {
+.doc-img.themes-color>a[data-value="theme-7"],
+.theme-color.themes-color>a[data-value="theme-7"] {
   background: linear-gradient(141.55deg, #922c88 3.46%, #922c88 99.86%), #922c88;
 }
 
-.doc-img.themes-color > a[data-value="theme-8"],
-.theme-color.themes-color > a[data-value="theme-8"] {
+.doc-img.themes-color>a[data-value="theme-8"],
+.theme-color.themes-color>a[data-value="theme-8"] {
   background: linear-gradient(141.55deg, #c0a145 3.46%, #c0a145 99.86%), #c0a145;
 }
 
-.doc-img.themes-color > a[data-value="theme-9"],
-.theme-color.themes-color > a[data-value="theme-9"] {
+.doc-img.themes-color>a[data-value="theme-9"],
+.theme-color.themes-color>a[data-value="theme-9"] {
   background: linear-gradient(141.55deg, #48494b 3.46%, #48494b 99.86%), #48494b;
 }
 
-.doc-img.themes-color > a[data-value="theme-10"],
-.theme-color.themes-color > a[data-value="theme-10"] {
+.doc-img.themes-color>a[data-value="theme-10"],
+.theme-color.themes-color>a[data-value="theme-10"] {
   background: linear-gradient(141.55deg, #0c7785 3.46%, #0c7785 99.86%), #0c7785;
 }
 
-.doc-img > a {
+.doc-img>a {
   width: 100px;
   height: 65px;
 }
@@ -288,6 +274,7 @@ File: style.css
 }
 
 @media (min-width: 1025px) {
+
   .dash-header[class*="bg-"] .dash-head-link,
   .dash-header.dark-header .dash-head-link {
     color: #fff;
@@ -341,7 +328,7 @@ File: style.css
   color: #333333;
 }
 
-.dash-sidebar.light-sidebar .dash-navbar > .dash-item > .dash-link {
+.dash-sidebar.light-sidebar .dash-navbar>.dash-item>.dash-link {
   border-radius: 6px;
   margin-left: 15px;
   margin-right: 15px;
@@ -396,46 +383,38 @@ File: style.css
   margin-top: 2px;
 }
 
-.dash-sidebar.light-sidebar .dash-item.active > .dash-link,
-.dash-sidebar.light-sidebar .dash-item:hover > .dash-link {
+.dash-sidebar.light-sidebar .dash-item.active>.dash-link,
+.dash-sidebar.light-sidebar .dash-item:hover>.dash-link {
   color: #51459d;
 }
 
-.dash-sidebar.light-sidebar .dash-item.active > .dash-link i,
-.dash-sidebar.light-sidebar .dash-item:hover > .dash-link i {
+.dash-sidebar.light-sidebar .dash-item.active>.dash-link i,
+.dash-sidebar.light-sidebar .dash-item:hover>.dash-link i {
   color: #51459d;
 }
 
-.dash-sidebar.light-sidebar
-  .dash-item.active
-  > .dash-link
-  .dash-micon
-  i.material-icons-two-tone,
-.dash-sidebar.light-sidebar
-  .dash-item:hover
-  > .dash-link
-  .dash-micon
-  i.material-icons-two-tone {
+.dash-sidebar.light-sidebar .dash-item.active>.dash-link .dash-micon i.material-icons-two-tone,
+.dash-sidebar.light-sidebar .dash-item:hover>.dash-link .dash-micon i.material-icons-two-tone {
   background-color: #51459d;
 }
 
 
-.dash-sidebar.light-sidebar .dash-navbar > .dash-item.active > .dash-link,
-.dash-sidebar.light-sidebar .dash-navbar > .dash-item:focus > .dash-link,
-.dash-sidebar.light-sidebar .dash-navbar > .dash-item:hover > .dash-link {
+.dash-sidebar.light-sidebar .dash-navbar>.dash-item.active>.dash-link,
+.dash-sidebar.light-sidebar .dash-navbar>.dash-item:focus>.dash-link,
+.dash-sidebar.light-sidebar .dash-navbar>.dash-item:hover>.dash-link {
   box-shadow: -6px 11px 19px rgba(0, 0, 0, 0.04);
   background: #fff;
   color: #333333;
 }
 
-.minimenu .dash-sidebar.light-sidebar .dash-navbar > .dash-item > .dash-link {
+.minimenu .dash-sidebar.light-sidebar .dash-navbar>.dash-item>.dash-link {
   padding: 20px 25px;
   margin-left: 0;
   margin-right: 0;
   border-radius: 0;
 }
 
-.minimenu .dash-sidebar.light-sidebar .dash-item .dash-item:hover > .dash-link {
+.minimenu .dash-sidebar.light-sidebar .dash-item .dash-item:hover>.dash-link {
   background: transparent;
 }
 
@@ -459,7 +438,7 @@ File: style.css
   color: #51459d;
 }
 
-.auth-wrapper ~ .pct-customizer {
+.auth-wrapper~.pct-customizer {
   display: none;
 }
 
@@ -470,6 +449,7 @@ File: style.css
   line-height: 16.71px;
   text-align: left;
 }
+
 .card {
   box-shadow: none !important;
   border: 1px !important;
@@ -496,6 +476,7 @@ File: style.css
   padding-block: 12px;
   border: none;
 }
+
 .lesson-btn:hover {
   background-color: rgb(0, 89, 178);
 }
@@ -511,21 +492,27 @@ File: style.css
   border-color: rgba(0, 113, 206, 1);
   border-width: 1px;
 }
+
 .follow-btn:hover {
   background-color: rgba(0, 113, 206, 1);
   color: #fff;
 }
+
 .profile-backdrop {
   background: rgba(231, 231, 250, 1);
   height: 168px;
   width: 100%;
   position: relative;
 }
+
 .profile-info-container {
   position: absolute;
   top: 90px;
+  gap: 10px;
   left: 20px;
 }
+
+
 .profile-image {
   display: inline-block;
   width: 150px;
@@ -535,6 +522,7 @@ File: style.css
   background-position: center center;
   background-size: cover;
 }
+
 .stats-container {
   width: 36rem;
   margin-left: 8rem;
@@ -551,15 +539,18 @@ File: style.css
   border-color: rgba(0, 113, 206, 1);
   border-width: 1px;
 }
+
 .follow-profile-btn:hover {
   background-color: rgba(0, 113, 206, 1);
   color: #fff;
 }
+
 .login-container-new {
   display: flex;
   justify-content: center;
   height: 100vh !important;
 }
+
 .login-design {
   background-color: rgba(0, 113, 206, 1) !important;
   border-radius: 0 73px 0 0;
@@ -598,37 +589,44 @@ File: style.css
   position: relative;
   z-index: 10;
 }
+
 .login-desing-footer h2 {
   font-size: 38px;
   color: #fff;
   font-weight: 700;
 }
+
 .login-desing-footer p {
   font-size: 16px;
   color: #fff;
   padding-top: 1rem;
 }
+
 .svg-1 {
   position: absolute;
   top: 0.5rem;
   right: 1.5rem;
 }
+
 .svg-2 {
   position: absolute;
   top: 0rem;
   right: 8rem;
 }
+
 .svg-3 {
   position: absolute;
   bottom: 0rem;
   right: 2rem;
 }
+
 .svg-4 {
   position: absolute;
   bottom: 0rem;
   left: -3rem;
   z-index: -1;
 }
+
 .sign-in-container {
   display: flex;
   flex-direction: column;
@@ -636,6 +634,7 @@ File: style.css
   width: 100%;
   justify-content: center;
 }
+
 .sign-in-container h2 {
   font-size: 36px;
   font-weight: 600;
@@ -643,18 +642,22 @@ File: style.css
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
+
 .form-container-signin {
   max-width: 460px;
   padding: 24px;
   width: 100% !important;
 }
+
 .min-h-card {
   min-height: 200px !important;
 }
+
 .form-control-new {
   border-radius: 10px;
   color: rgba(0, 113, 206, 1);
 }
+
 .form-control-new:focus {
   border-color: rgba(0, 113, 206, 1);
 }
@@ -790,10 +793,12 @@ File: style.css
   background-color: #f7e50a !important;
   color: #fff !important;
 }
+
 .custom-available-class {
   background-color: #0071ce !important;
   color: #fff !important;
 }
+
 .custom-completed-class {
   background-color: #41d85f !important;
   color: #fff !important;
@@ -805,12 +810,14 @@ File: style.css
   width: 20px;
   border-radius: 100%;
 }
+
 .booked-key {
   background-color: #f7e50a;
   height: 20px;
   width: 20px;
   border-radius: 100%;
 }
+
 .avaialable-key {
   background-color: #0071ce;
   height: 20px;
@@ -823,8 +830,10 @@ File: style.css
 }
 
 .fc-timegrid-slot {
-  height: 35px !important; /* Adjust this value for larger slots */
+  height: 35px !important;
+  /* Adjust this value for larger slots */
 }
+
 .signup-text {
   margin-top: 1rem;
   color: #525b69;
@@ -832,4 +841,12 @@ File: style.css
 
 .signup-text a {
   color: #0071ce;
+}
+
+@media (max-width:767px) {
+  
+  .stats-container {
+    width: 100%;
+    margin-left: auto;
+  }
 }
