--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -30529,4 +30529,9 @@ div#calendar .fc-list-table {
   .custom-event-class {
     display: table-row !important;
   }
+
+  .landing-hero .hero-sec img {
+    height: 400px;
+
+  }
 }
