--- a/public/assets/css/customizer.css
+++ b/public/assets/css/customizer.css
@@ -500,16 +500,18 @@ File: style.css
 
 .profile-backdrop {
   background: rgba(231, 231, 250, 1);
-  height: 168px;
+  /* height: 168px; */
   width: 100%;
   position: relative;
+  padding: 20px;
 }
 
 .profile-info-container {
-  position: absolute;
-  top: 90px;
-  gap: 10px;
-  left: 20px;
+  /* position: absolute; */
+  /* top: 90px; */
+  gap: 15px;
+  /* left: 20px; */
+      align-items: center;
 }
 
 
