--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -30535,3 +30535,26 @@ div#calendar .fc-list-table {
 
   }
 }
+
+
+
+.subs-feature ul,
+.price-card ul {
+  list-style-type: disc;
+  margin-left: 20px;
+  margin-bottom: 20px;
+}
+
+
+.subs-feature .lesson-btn:hover,
+.price-card .lesson-btn:hover {
+  color: white;
+}
+
+.price-card {
+  text-align: left;
+}
+
+.price-card ul {
+  margin-left: 0;
+}
